--- a/myPortfolioProject/src/app/main/main.component.css
+++ b/myPortfolioProject/src/app/main/main.component.css
@@ -1,209 +1,223 @@
 .section {
-    margin-bottom: 30px;
-    }
-  
-  .portfolio {
-      padding: 50px 0;
-      text-align: center;
-      font-family: 'Righteous';
-    }
-    
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 20px;
-    }
-  
-    
-    /* Estilos de títulos */
-    h1.text-primary {
-      color: #1abc9c;
-      font-size: 36px;
-      font-weight: bold;
-      margin-bottom: 3.5em;
-    }
-    
-    h2.text-muted {
-      color: #888888;
-      font-size: 24px;
-      font-weight: bold;
-      margin-bottom: 20px;
-    }
-    
-    h3 {
-      color: #333333;
-      font-size: 20px;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-  
-    li {
-      list-style: none;
-    }
-    
-  @import url(https://fonts.googleapis.com/css?family=Righteous);
-  
+  padding-bottom: 5em;
+}
+
+.portfolio {
+  padding: 50px 0;
+  text-align: center;
+  font-family: 'Righteous';
+  background-color: #f3f3f3;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+/* Estilos de títulos */
+h1.text-primary {
+  color: #1abc9c;
+  font-size: 1em;
+  font-weight: bold;
+  margin-bottom: 3.5em;
+}
+
+h2.text-muted {
+  color: #888888;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+h3 {
+  color: #333333;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 1em;
+}
+
+li {
+  list-style: none;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Righteous);
+
+.main-title {
+  color: black;
+  letter-spacing: 0.05em;
+  text-align: center;
+  animation: move linear 5000ms infinite;
+  font-size: 3em;
+}
+
+@media screen and (min-width: 768px) {
   .main-title {
-    color: black;
-    letter-spacing: 0.05em;
-    text-align: center;
-    animation: move linear 5000ms infinite;
-    font-size: 3em; 
+    font-size: 5em;
   }
-  
-  @media screen and (min-width: 768px) {
-      .main-title {
-          font-size: 8em;
-      }
-    }
-  
-  @keyframes move {
-    0% {
-      text-shadow:
-        4px -4px 0 hsla(0, 100%, 50%, 1), 
-        3px -3px 0 hsla(0, 100%, 50%, 1), 
-        2px -2px 0 hsla(0, 100%, 50%, 1), 
-        1px -1px 0 hsla(0, 100%, 50%, 1),
-        -4px 4px 0 hsla(180, 100%, 50%, 1), 
-        -3px 3px 0 hsla(180, 100%, 50%, 1), 
-        -2px 2px 0 hsla(180, 100%, 50%, 1), 
-        -1px 1px 0 hsla(180, 100%, 50%, 1)
-      ;
-    }
-    50% {
-      text-shadow:
-        -4px 4px 0 hsla(0, 100%, 50%, 1), 
-        -3px 3px 0 hsla(0, 100%, 50%, 1), 
-        -2px 2px 0 hsla(0, 100%, 50%, 1), 
-        -1px 1px 0 hsla(0, 100%, 50%, 1),
-        4px -4px 0 hsla(180, 100%, 50%, 1), 
-        3px -3px 0 hsla(180, 100%, 50%, 1), 
-        2px -2px 0 hsla(180, 100%, 50%, 1), 
-        1px -1px 0 hsla(180, 100%, 50%, 1)
-      ;
-    }
-    100% {
-      text-shadow:
-        4px -4px 0 hsla(0, 100%, 50%, 1), 
-        3px -3px 0 hsla(0, 100%, 50%, 1), 
-        2px -2px 0 hsla(0, 100%, 50%, 1), 
-        1px -1px 0 hsla(0, 100%, 50%, 1),
-        -4px 4px 0 hsla(180, 100%, 50%, 1), 
-        -3px 3px 0 hsla(180, 100%, 50%, 1), 
-        -2px 2px 0 hsla(180, 100%, 50%, 1), 
-        -1px 1px 0 hsla(180, 100%, 50%, 1)
-      ;
-    }  
+
+h1.text-primary {
+  font-size: 2.5em;
+}
+
+h3 {
+  font-size: 2em;
+}
+
+}
+
+@media screen and (min-width: 1090px) {
+  .main-title {
+    font-size: 8em;
   }
-  
-  
-  .skills {
-      max-width: 68.75rem;
-      margin: auto;
-      text-align: center;
-      margin-top: 2.5rem;
-    }
-    
-    .skill-header {
-      margin-bottom: 1rem;
-    }
-    
-    .skills-wrapper img {
-      padding: 1.25rem;
-    }
-    
-    .icon {
-      width: 11.875rem;
-      height: 11.25rem;
-    }
-  
-    .icon-card {
-      background-color: #fff;
-      border-radius: 2em;
-      border-color: #333333;
-      padding: 20px;
-      margin: 10px;
-    }
-  
-  
-    
-  
-    /* carousel */
-    .carousel {
-      width: 100%;
-      overflow-x: scroll;
-      padding: 30px;
-      padding-top: 80px;
-      position: relative;
-      -webkit-box-sizing: border-box;
-      box-sizing: border-box;
-    }
-    
-    .carousel-item {
-      width: 200px;
-      height: 200px;
-      border-radius: 20px;
-      overflow: hidden;
-      margin-right: 10px;
-      margin-top: 70px;
-      display: inline-block;
-      cursor: pointer;
-      transition: 1000ms all;
-      -webkit-transform-origin: center left;
-      transform-origin: center left;
-      position: relative;
-    }
-    
-    .carousel-item:hover ~ .carousel-item {
-      -webkit-transform: translate3d(100px, 0, 0);
-      transform: translate3d(100px, 0, 0);
-    }
-    
-    .carousel__container:hover .carousel-item {
-      opacity: 0.3;
-    }
-    
-    .carousel__container:hover .carousel-item:hover {
-      -webkit-transform: scale(1.2);
-      transform: scale(1.2);
-      opacity: 1;
-    }
-    
-    .carousel-item__img {
-      width: 200px;
-      height: 200px;
-      -o-object-fit: cover;
-      object-fit: cover;
-    }
-    
-    .carousel-item__details {
-      background: linear-gradient(
-        to top,
-        rgba(0, 0, 0, 0.9) 0%,
-        rgba(0, 0, 0, 0) 100%
-      );
-      font-size: 10px;
-      opacity: 0;
-      transition: 450ms opacity;
-      padding: 10px;
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-    }
-    
-    .carousel-item__details:hover {
-      opacity: 1;
-    }
-    
-    .carousel-item__details .controls {
-      padding-top: 150px;
-    }
-    
-    .carousel-item__details .carousel-item__details--title,
-    .carousel-item__details--subtitle {
-      color: #fff;
-      margin: 5px 0;
-    }
-  
+}
+
+@keyframes move {
+  0% {
+    text-shadow:
+      4px -4px 0 hsla(0, 100%, 50%, 1),
+      3px -3px 0 hsla(0, 100%, 50%, 1),
+      2px -2px 0 hsla(0, 100%, 50%, 1),
+      1px -1px 0 hsla(0, 100%, 50%, 1),
+      -4px 4px 0 hsla(180, 100%, 50%, 1),
+      -3px 3px 0 hsla(180, 100%, 50%, 1),
+      -2px 2px 0 hsla(180, 100%, 50%, 1),
+      -1px 1px 0 hsla(180, 100%, 50%, 1);
+  }
+
+  50% {
+    text-shadow:
+      -4px 4px 0 hsla(0, 100%, 50%, 1),
+      -3px 3px 0 hsla(0, 100%, 50%, 1),
+      -2px 2px 0 hsla(0, 100%, 50%, 1),
+      -1px 1px 0 hsla(0, 100%, 50%, 1),
+      4px -4px 0 hsla(180, 100%, 50%, 1),
+      3px -3px 0 hsla(180, 100%, 50%, 1),
+      2px -2px 0 hsla(180, 100%, 50%, 1),
+      1px -1px 0 hsla(180, 100%, 50%, 1);
+  }
+
+  100% {
+    text-shadow:
+      4px -4px 0 hsla(0, 100%, 50%, 1),
+      3px -3px 0 hsla(0, 100%, 50%, 1),
+      2px -2px 0 hsla(0, 100%, 50%, 1),
+      1px -1px 0 hsla(0, 100%, 50%, 1),
+      -4px 4px 0 hsla(180, 100%, 50%, 1),
+      -3px 3px 0 hsla(180, 100%, 50%, 1),
+      -2px 2px 0 hsla(180, 100%, 50%, 1),
+      -1px 1px 0 hsla(180, 100%, 50%, 1);
+  }
+}
+
+.about-me p {
+  text-align: justify;
+}
+
+
+
+/* carousel */
+@mixin white-gradient {
+  background: linear-gradient(to right, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(calc(-250px * 4))
+  }
+}
+
+
+.slider {
+  background: #f3f3f3;
+  height: 100px;
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+
+  &::after {
+    right: 1;
+    top: 0;
+    transform: rotateZ(180deg);
+  }
+
+  &::before {
+    left: 0;
+    top: 0;
+  }
+
+  .slide-track {
+    animation: scroll 20s linear infinite;
+    display: flex;
+    width: calc(170px * 5);
+  }
+
+  .slide {
+    height: 100px;
+    width: 170px;
+  }
+}
+
+/* Language */
+.language-selector {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.language-item {
+  text-align: center;
+  position: relative;
+}
+
+.language-circle {
+  position: relative;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: #ccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+
+.language-circle img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  max-width: 100%;
+  max-height: 100%;
+  transition: opacity 0.3s ease;
+}
+
+.language-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.language-circle:hover .language-overlay {
+  opacity: 1;
+}
+
+.language-text {
+  font-size: 14px;
+  color: black;
+  font-weight: bold;
+}
