--- a/myPortfolioProject/src/app/projects/projects.component.html
+++ b/myPortfolioProject/src/app/projects/projects.component.html
@@ -2,27 +2,85 @@
 
 <section class="project-section">
   <div class="project-content">
-    <a href="https://github.com/lauragonzs/Proyecto_Clinica_Estetica.git" class="project-link">
-      <img src="../../assets/estetica.jpg" class="project-image" />
-    </a>
+    <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../../assets/estetica1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../../assets/estetica2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../../assets/estetica3.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../../assets/estetica4.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../../assets/estetica5.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carousel1" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
     <div class="project-info">
-      <h2>Proyecto xd</h2>
+
+      <a href="https://github.com/lauragonzs/Proyecto_Clinica_Estetica.git" class="project-link">
+        <h2>Web Clínica Estética</h2>
+      </a>
       <p class="project-description">Info descriptiva</p>
     </div>
   </div>
-  
+
 </section>
 
 <section class="project-section">
-    <div class="project-content">
-      <a href="https://github.com/lauragonzs/Proyecto_Clinica_Estetica.git" class="project-link">
-        <img src="../../assets/librarium.jpg" class="project-image" />
-      </a>
-      <div class="project-info">
-        <h2>Proyecto xd</h2>
-        <p class="project-description">Info descriptiva</p>
+  <div class="project-content">
+    <div id="carousel2" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../../assets/librarium1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../../assets/librarium2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../../assets/librarium3.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../../assets/librarium4.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../../assets/librarium5.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../../assets/librarium6.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../../assets/librarium7.jpg" class="d-block w-100" alt="...">
+        </div>
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carousel2" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    
-  </section>
-  
+    <div class="project-info">
+      <a href="https://github.com/lauragonzs/ServicioBibliotecaOnline.git" class="project-link">
+        <h2>Librarium</h2>
+      </a>
+      <p class="project-description">Info descriptiva</p>
+    </div>
+  </div>
+
+</section>
