--- a/myPortfolioProject/src/app/projects/projects.component.css
+++ b/myPortfolioProject/src/app/projects/projects.component.css
@@ -21,12 +21,13 @@ h1 {
     justify-content: center;
     padding: 20px;
     background-color: #f4f4f4;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
   }
   
   .project-content {
     display: flex;
     align-items: center;
+    width: 100%;
   }
   
   .project-link {
@@ -59,7 +60,12 @@ h1 {
     font-size: 16px;
     color: #555;
   }
-  
 
-  
-  
+  .carousel-item img {
+    width: 40em !important;
+    height: 50em !important;
+  }
+
+  .carousel {
+    width: 40em !important;
+  }
