--- a/myPortfolioProject/src/app/projects/projects.component.html
+++ b/myPortfolioProject/src/app/projects/projects.component.html
@@ -32,9 +32,33 @@
     <div class="project-info">
 
       <a href="https://github.com/lauragonzs/Proyecto_Clinica_Estetica.git" class="project-link">
-        <h2>Web Clínica Estética</h2>
+        <h2>Medical Aesthetics Clinic Webpage</h2>
       </a>
-      <p class="project-description">Info descriptiva</p>
+      <p class="project-description">
+        The goal of this project was to create a visually appealing and easy-to-use platform that allows the clients of
+        an aesthetic clinic to explore treatments and promotions, easily contact the clinic and access their
+        personalized profile. The website was designed to be responsive, providing an optimal experience on mobile and
+        tablet devices.
+        <br><br>
+        To bring this project to life, I used a combination of HTML, CSS, and JavaScript in the early stages. These
+        technologies allowed me to build the core functionalities of the website, ensuring smooth navigation, form
+        submission, and user authentication. Data storage and authentication were handled using Firebase. The design
+        phase was made easier by the use of Figma, a powerful design tool that helped me create aesthetically pleasing
+        interfaces. I selected a color palette with the help of an artificial intelligence, ensuring a consistent and
+        visually appealing appearance throughout the website.
+        <br><br>
+        To manage the project efficiently, I used Trello. This allowed me to organize tasks, track progress, and
+        collaborate effectively with the team. Through the use of agile methodologies and task prioritization, I ensured
+        a smooth and timely development process.
+        <br><br>
+        As the project progressed, I recognized the need for a more robust and scalable framework. Consequently, I
+        migrated the website to the Angular framework. This transition provided improved performance and
+        maintainability, ensuring future scalability.
+        <br><br>
+        The final result was an aesthetically pleasing and functional website where clients could explore treatments,
+        easily contact the clinic through intuitive forms, and access personalized profiles. They could also take
+        advantage of promotions and refer to the Frequently Asked Questions section (FAQ).
+      </p>
     </div>
   </div>
 
@@ -79,7 +103,37 @@
       <a href="https://github.com/lauragonzs/ServicioBibliotecaOnline.git" class="project-link">
         <h2>Librarium</h2>
       </a>
-      <p class="project-description">Info descriptiva</p>
+      <p class="project-description">
+        Librarium is an innovative website that offers a subscription-based online library service, giving subscribed
+        users the opportunity to access a wide variety of books digitally.
+        <br><br>
+        To carry out this project, I used Angular Framework and Firebase, in order to manage user authentication and
+        store the database in the cloud.
+        <br><br>
+        The website has a wide number of outstanding features. Firstly, a book details section has been developed, where
+        users can get detailed information about each work. In addition, a book reading page has been implemented,
+        allowing users to change the language and enjoy a personalized reading experience. The page also has a reviews
+        section, where users can share their opinions and comments about the books.
+        <br><br>
+        In order to facilitate the search for books, an advanced search section has been incorporated, which allows
+        users to filter by title, author or category. An audiobook section has also been included, giving users the
+        option to enjoy audio narrations. The user profiles are a fundamental part of the page, since they allow each
+        user to have a personalized follow-up of their favourites, read and pending books.
+        <br><br>
+        In addition, an administrator panel has been developed that provides additional functionalities. The admin can
+        perform a full CRUD (Create, Read, Update, Delete) of users and books, as well as remove inappropriate reviews.
+        This guarantees efficient and safe control of the platform.
+        <br><br>
+        In terms of design, special attention has been paid to the user experience. The website offers the option of
+        light mode and dark mode, adapting to the individual preferences of each user. In addition, we have used an API
+        to offer the option to switch the language between English and Spanish, with the aim of obtaining more users.
+        <br><br>
+        To ensure a smooth and secure subscription experience, we have used a fee payment API, allowing users to manage
+        their membership easily and securely.
+        <br><br>
+        The website is complete and offers a wide range of functionalities that provide reading-loving users with an
+        enriching and satisfying experience, being more than a viable production-ready minimum.
+      </p>
     </div>
   </div>
 
