--- a/myPortfolioProject/src/app/main/main.component.css
+++ b/myPortfolioProject/src/app/main/main.component.css
@@ -1,84 +1,100 @@
-.section {
-  padding-bottom: 5em;
-}
+@import url(https://fonts.googleapis.com/css?family=Righteous);
 
-.portfolio {
-  padding: 50px 0;
-  text-align: center;
-  font-family: 'Righteous';
-  background-color: #f3f3f3;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-/* Estilos de títulos */
 h1.text-primary {
-  color: #1abc9c;
+  color: #1abc9c !important;
   font-size: 1em;
   font-weight: bold;
   margin-bottom: 3.5em;
 }
 
-h2.text-muted {
-  color: #888888;
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-h3 {
-  color: #333333;
-  font-size: 20px;
-  font-weight: bold;
-  margin-bottom: 1em;
-}
-
-li {
-  list-style: none;
-}
-
-@import url(https://fonts.googleapis.com/css?family=Righteous);
-
-.main-title {
-  color: black;
+.main-title2 {
+  color: #F3F3F3;
   letter-spacing: 0.05em;
   text-align: center;
   animation: move linear 5000ms infinite;
   font-size: 3em;
 }
 
-@media screen and (min-width: 768px) {
+.main-title {
+  color: #F3F3F3;
+  text-align: center;
+  font-size: 4em;
+  font-family: "Righteous";
+}
+
+.sect {
+  width: 100%;
+  text-align: center;
+  padding-top: 4em;
+}
+
+.sect .button {
+  font-size: 18px;
+  text-decoration: none;
+  color: #1abc9c;
+  border: #1abc9c 1px solid;
+  padding: 10px 20px;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
+.sect .button:hover {
+  background: #1abc9c;
+  color: #fff;
+}
+
+video {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+@media screen and (min-width: 600px) {
   .main-title {
     font-size: 5em;
+    padding: 0;
   }
 
-h1.text-primary {
-  font-size: 2.5em;
+  h1.text-primary {
+    font-size: 2.5em;
+    margin-bottom: 1em;
+  }
+
+  .sect {
+    padding: 6em;
+  }
+
 }
 
-h3 {
-  font-size: 2em;
+@media screen and (min-width: 880px) {
+  .main-title {
+    font-size: 6em;
+    margin: 0;
+    padding-top: 1em;
+  }
+  .sect {
+    padding: 8em;
+  }
 }
 
-}
-
-@media screen and (min-width: 1090px) {
+@media screen and (min-width: 1230px) {
   .main-title {
     font-size: 8em;
+    padding: 0;
   }
 }
 
 @keyframes move {
   0% {
     text-shadow:
-      4px -4px 0 hsla(0, 100%, 50%, 1),
-      3px -3px 0 hsla(0, 100%, 50%, 1),
-      2px -2px 0 hsla(0, 100%, 50%, 1),
-      1px -1px 0 hsla(0, 100%, 50%, 1),
+      4px -4px 0 rgb(255, 136, 0),
+      3px -3px 0 rgb(255, 136, 0),
+      2px -2px 0 rgb(255, 136, 0),
+      1px -1px 0 rgb(255, 136, 0),
       -4px 4px 0 hsla(180, 100%, 50%, 1),
       -3px 3px 0 hsla(180, 100%, 50%, 1),
       -2px 2px 0 hsla(180, 100%, 50%, 1),
@@ -87,10 +103,10 @@ h3 {
 
   50% {
     text-shadow:
-      -4px 4px 0 hsla(0, 100%, 50%, 1),
-      -3px 3px 0 hsla(0, 100%, 50%, 1),
-      -2px 2px 0 hsla(0, 100%, 50%, 1),
-      -1px 1px 0 hsla(0, 100%, 50%, 1),
+      -4px 4px 0 rgb(255, 136, 0),
+      -3px 3px 0 rgb(255, 136, 0),
+      -2px 2px 0 rgb(255, 136, 0),
+      -1px 1px 0 rgb(255, 136, 0),
       4px -4px 0 hsla(180, 100%, 50%, 1),
       3px -3px 0 hsla(180, 100%, 50%, 1),
       2px -2px 0 hsla(180, 100%, 50%, 1),
@@ -99,121 +115,13 @@ h3 {
 
   100% {
     text-shadow:
-      4px -4px 0 hsla(0, 100%, 50%, 1),
-      3px -3px 0 hsla(0, 100%, 50%, 1),
-      2px -2px 0 hsla(0, 100%, 50%, 1),
-      1px -1px 0 hsla(0, 100%, 50%, 1),
+      4px -4px 0 rgb(255, 136, 0),
+      3px -3px 0 rgb(255, 136, 0),
+      2px -2px 0 rgb(255, 136, 0),
+      1px -1px 0 rgb(255, 136, 0),
       -4px 4px 0 hsla(180, 100%, 50%, 1),
       -3px 3px 0 hsla(180, 100%, 50%, 1),
       -2px 2px 0 hsla(180, 100%, 50%, 1),
       -1px 1px 0 hsla(180, 100%, 50%, 1);
   }
-}
-
-.about-me p {
-  text-align: justify;
-}
-
-
-
-/* carousel */
-@keyframes scroll {
-  0% {
-    transform: translateX(0);
-  }
-
-  100% {
-    transform: translateX(calc(-250px * 4))
-  }
-}
-
-
-.slider {
-  background: #f3f3f3;
-  height: 100px;
-  margin: auto;
-  overflow: hidden;
-  position: relative;
-
-  &::after {
-    right: 1;
-    top: 0;
-    transform: rotateZ(180deg);
-  }
-
-  &::before {
-    left: 0;
-    top: 0;
-  }
-
-  .slide-track {
-    animation: scroll 20s linear infinite;
-    display: flex;
-    width: calc(170px * 5);
-  }
-
-  .slide {
-    height: 100px;
-    width: 170px;
-  }
-}
-
-/* Language */
-.language-selector {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 400px;
-  margin: 0 auto;
-}
-
-.language-item {
-  text-align: center;
-  position: relative;
-}
-
-.language-circle {
-  position: relative;
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  background-color: #ccc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 10px;
-  overflow: hidden;
-}
-
-.language-circle img {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  max-width: 100%;
-  max-height: 100%;
-  transition: opacity 0.3s ease;
-}
-
-.language-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-.language-circle:hover .language-overlay {
-  opacity: 1;
-}
-
-.language-text {
-  font-size: 14px;
-  color: black;
-  font-weight: bold;
 }
