--- a/myPortfolioProject/src/app/projects/projects.component.css
+++ b/myPortfolioProject/src/app/projects/projects.component.css
@@ -4,7 +4,7 @@
 h1 {
     color: #1abc9c;
     font-family: 'Righteous';
-    font-size: 4em;
+    font-size: 2.5em;
     font-weight: bold;
     margin: 1em;
     text-align: center;
@@ -12,7 +12,8 @@ h1 {
 
   h2 {
     font-family: 'Righteous';
-    
+    font-size: 24px;
+    color: #333;
   }
 
 .project-section {
@@ -21,38 +22,23 @@ h1 {
     justify-content: center;
     padding: 20px;
     background-color: #f4f4f4;
-    margin-bottom: 2em;
+    margin-top: 2em;
+    text-align: justify;
   }
   
   .project-content {
     display: flex;
+    flex-direction: column-reverse;
     align-items: center;
     width: 100%;
   }
   
   .project-link {
-    display: inline-block;
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .project-image {
-    display: block;
-    width: 30em;
-    transition: transform 0.3s;
-  }
-  
-  .project-image:hover {
-    transform: scale(1.1);
+    text-align: center;
   }
   
   .project-info {
     margin-left: 20px;
-  }
-  
-  .project-info h2 {
-    font-size: 24px;
-    color: #333;
   }
   
   .project-info p {
@@ -62,10 +48,29 @@ h1 {
   }
 
   .carousel-item img {
-    width: 40em !important;
-    height: 50em !important;
+    width: 300px !important;
+    height: 400px !important;
   }
 
-  .carousel {
-    width: 40em !important;
+  @media screen and (min-width: 485px) {
+    .carousel-item img {
+      width: 400px !important;
+      height: 500px !important;
+    }
+    h1 {
+      font-size: 4em;
+    }
+
+  }
+
+  @media screen and (min-width: 1024px) {
+    .carousel-item img {
+      width: 500px !important;
+      height: 600px !important;
+    }
+
+    .project-content{
+      flex-direction: row;
+    }
+
   }
