--- a/myPortfolioProject/src/app/carousel-item/carousel-item.component.html
+++ b/myPortfolioProject/src/app/carousel-item/carousel-item.component.html
@@ -1,3 +1,4 @@
-  <div class="slide">
-    <img [src]="img" height="100" width="150" alt="" />
+<div class="slide">
+  <img [src]="img" height="100" width="150" alt="" />
+  <p>{{title}}</p>
 </div>
