--- a/myPortfolioProject/src/app/projects/projects.component.html
+++ b/myPortfolioProject/src/app/projects/projects.component.html
@@ -136,5 +136,127 @@
       </p>
     </div>
   </div>
+</section>
 
+<section class="project-section">
+  <div class="project-content">
+    <img class="java" src="../../assets/neuralNetwork.jpg" />
+    <div class="project-info">
+      <a href="https://github.com/lauragonzs/NeuralNetwork-TomatoLeaves.git" class="project-link">
+        <h2>Neural Network</h2>
+      </a>
+      <p class="project-description">
+        In this project, I have designed a training system using a neural network to identify different diseases in
+        tomato leaves. To achieve this, I have used two key tools: TensorFlow for the creation and training of the
+        neural networks, and the VGG16 architecture.
+        <br><br>
+        The model has been trained using a comprehensive collection of photographs of tomato leaves affected by various
+        diseases.
+        <br><br>
+        The obtained result has been a model accuracy of 0.9539. This means that the model is capable of correctly
+        classifying diseases in a high percentage of cases, demonstrating its effectiveness and usefulness in diagnosing
+        tomato leaf diseases.
+        <br><br>
+        In addition to training the neural network, a graph has been designed to display the model's accuracy over time.
+        This graph is used for visualizing and analyzing the improvement of the model as the training progresses.
+        <br><br>
+        Furthermore, a confusion matrix has been created, which is a useful tool for evaluating the performance of a
+        classification model. This matrix displays the frequency at which the model correctly or incorrectly classifies
+        each disease class in tomato leaves, providing valuable information for adjusting and improving the model in
+        future iterations.
+        <br><br>
+        The resulting model has achieved a high accuracy in identifying diseases in tomato leaves, demonstrating its
+        potential application in early detection and control of diseases in agricultural crops.
+      </p>
+    </div>
+  </div>
+</section>
+
+<section class="project-section">
+  <div class="project-content">
+    <video class="java" controls loop muted autoplay oncanplay="this.play()" onloadedmetadata="this.muted = true">
+      <source src="../../assets/ImageViewer.mp4" type="video/mp4">
+    </video>
+    <div class="project-info">
+      <a href="https://github.com/lauragonzs/ImageViewer.git" class="project-link">
+        <h2>Image Viewer</h2>
+      </a>
+      <p class="project-description">
+        The Image Viewer project is a Java-based desktop application that functions as an image carousel. Users can
+        navigate through a collection of images using scroll arrows or by directly dragging the images with the mouse.
+        <br><br>
+        To ensure a well-structured design, the Model-View-Presenter (MVP) architectural pattern was implemented. The
+        View handles the display of the user interface, including the carousel interface and image area, while receiving
+        user input.
+        <br><br>
+        The Presenter acts as the intermediary between the Model and the View. It receives user input from the View,
+        interacts with the Model to retrieve relevant images, and updates the View accordingly. It also manages the
+        logic for arrow-based scrolling and mouse interaction, ensuring the proper display of images based on user
+        actions.
+        <br><br>
+        By utilizing the MVP pattern, the application achieves a clear separation of responsibilities, simplifying
+        maintenance. The collaboration between the Model, View, and Presenter creates an intuitive and user-friendly
+        image carousel experience, allowing seamless navigation through images using scroll arrows or direct mouse
+        interaction.
+      </p>
+    </div>
+  </div>
+</section>
+
+<section class="project-section">
+  <div class="project-content">
+    <img class="java" src="../../assets/BlackJackTDD.jpg" />
+    <div class="project-info">
+      <a href="https://github.com/lauragonzs/BlackJack-TDD" class="project-link">
+        <h2>BlackJack TDD</h2>
+      </a>
+      <p class="project-description">
+        The "Blackjack Game" desktop application implements the game of blackjack using the Test-Driven Development
+        (TDD) methodology in Java.
+        <br><br>
+        The development of the application follows the TDD approach, which involves writing tests before implementing
+        the functionality. Tests are created to define the expected behavior of different game components, such as the
+        deck of cards, scoring rules, and player actions.
+        <br><br>
+        With each test, the necessary code is implemented to make it pass. This ensures that the functionality is
+        developed incrementally and that the established requirements are always met. This approach also guarantees a
+        high level of test coverage, promoting code robustness and maintainability. It enables the application to easily
+        grow and adapt in the future.
+      </p>
+    </div>
+  </div>
+</section>
+
+<section class="project-section">
+  <div class="project-content">
+    <video class="java" controls loop muted autoplay oncanplay="this.play()" onloadedmetadata="this.muted = true">
+      <source src="../../assets/MoneyCalculator.mp4" type="video/mp4">
+    </video>
+    <div class="project-info">
+      <a href="https://github.com/lauragonzs/MoneyCalculator.git" class="project-link">
+        <h2>Money Calculator</h2>
+      </a>
+      <p class="project-description">
+        The MoneyCalculator project is a Java-based desktop application that serves as a currency exchange calculator.
+        It allows users to calculate exchange rates between different currencies using their respective currencies.
+        <br><br>
+        To design the application, the Model-View-Controller (MVC) architectural pattern has been employed. The Model
+        represents the data and logic of the application, including currency information and exchange rate calculations.
+        <br><br>
+        The View is responsible for displaying the user interface elements, such as input fields for selecting
+        currencies and displaying the calculated exchange rates.
+        <br><br>
+        The Controller acts as the intermediary between the Model and the View. It handles user input, communicates with
+        the Model to perform currency calculations, and updates the View accordingly.
+        <br><br>
+        By implementing the MVC pattern, the application achieves a clear separation of concerns, making it easier to
+        maintain and modify. The Model handles currency data and calculations, the View handles user interface
+        rendering, and the Controller manages the interactions between them.
+        <br><br>
+        Overall, the MoneyCalculator application provides a user-friendly interface for calculating exchange rates
+        between different currencies, utilizing the MVC architecture to ensure a well-structured and maintainable
+        design.
+      </p>
+    </div>
+  </div>
 </section>
