--- a/myPortfolioProject/src/app/about-me/about-me.component.html
+++ b/myPortfolioProject/src/app/about-me/about-me.component.html
@@ -56,15 +56,21 @@
         skills in teamwork, communication, and adaptability. I firmly believe in the significance of collaborating with
         diverse individuals and leveraging a variety of perspectives to generate innovative solutions.
         <br><br>
-        My education has equipped me with a comprehensive understanding of web and mobile development, encompassing
-        languages such as HTML, CSS, JavaScript, and prominent frameworks like Angular.
+        I have received a solid education in web and mobile development, equipping me with a strong understanding of
+        languages such as HTML, CSS, JavaScript, and experience with frameworks like Angular and Ionic.
+
+        Additionally, I have a keen interest in cloud computing and how it is transforming the way businesses operate
+        and store data.
         <br><br>
-        In addition to my computer engineering training, I concurrently pursued the International Baccalaureate and the
-        Spanish Scientific Baccalaureate at Heidelberg College. This multifaceted experience has honed my ability to
-        adapt to diverse environments and educational approaches.
+        In addition to my computer engineering training, I pursued the International Baccalaureate and the Spanish
+        Scientific Baccalaureate at Heidelberg College concurrently. This diverse educational background has not only
+        enhanced my adaptability to different environments and educational approaches but also allowed me to focus on
+        developing proficiency in languages such as English and German. This linguistic component of my education
+        complements my technical knowledge, enabling me to effectively collaborate and communicate in international
+        settings.
         <br><br>
-        As a student, my aspiration is to continually evolve professionally and embrace fresh challenges that come my
-        way.
+        As a student, my goal is to constantly grow and develop both personally and professionally. I have a strong
+        desire to embrace new challenges and expand my horizons.
       </p>
     </div>
 
