--- a/myPortfolioProject/src/app/about-me/about-me.component.css
+++ b/myPortfolioProject/src/app/about-me/about-me.component.css
@@ -36,52 +36,32 @@ h3 {
 
 p{
   margin-top: 10px;
-  font-size: 16px;
+  font-size: 14px;
   color: #555;
   font-family: 'Courier New', Courier, monospace;
-}
-
-@media screen and (min-width: 768px) {
-
-  h1 {
-    font-size: 4em;
-  }
-
-  h3 {
-    font-size: 2em;
-  }
-
-}
-
-.about-me p {
   text-align: justify;
 }
-
-
 
 /* carousel */
 @keyframes scroll {
   0% {
-    transform: translateX(0);
+    transform: translateX(30em);
   }
 
   100% {
-    transform: translateX(calc(-250px * 15))
+    transform: translateX(calc(-250px * 14.5))
   }
 }
-
 
 .slider {
   background: #f3f3f3;
   margin: auto;
   overflow: hidden;
   position: relative;
-
-
 }
 
 .slide-track {
-  animation: scroll 20s linear infinite;
+  animation: scroll 30s linear infinite;
   display: flex;
   width: min-content;
 }
@@ -151,4 +131,17 @@ p{
   font-weight: bold;
 }
 
+@media screen and (min-width: 768px) {
+  h1 {
+    font-size: 4em;
+  }
 
+  h3 {
+    font-size: 2em;
+  }
+
+  p {
+    font-size: 16px;
+  }
+
+}
